--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@marsidev/react-turnstile": "^1.4.2",
+    "bcryptjs": "^3.0.3",
     "flowbite": "^4.0.1",
     "mongoose": "^9.2.1",
     "next": "16.1.6",
