--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@marsidev/react-turnstile": "^1.4.2",
     "bcryptjs": "^3.0.3",
     "flowbite": "^4.0.1",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.1",
     "next": "16.1.6",
     "react": "19.2.3",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
