--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.3",
     "flowbite": "^4.0.1",
     "jsonwebtoken": "^9.0.3",
+    "lucide-react": "^0.564.0",
     "mongoose": "^9.2.1",
     "next": "16.1.6",
     "react": "19.2.3",
