--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@marsidev/react-turnstile": "^1.4.2",
     "bcryptjs": "^3.0.3",
+    "clsx": "^2.1.1",
     "flowbite": "^4.0.1",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.564.0",
